syntax = "proto3";

package hello;

option go_package = "./pb";

message HelloRequest {
  string name = 1;
}
message HelloReply {
  string message = 1;
}

service HelloService{
  rpc SayHello(HelloRequest) returns (HelloReply);
}

service HiService{
  rpc SayHi(HelloRequest) returns (HelloReply);
}